tests/security/taintedInputFromReturnTypeWithBranch/output.txt
ERROR: TaintedData - input.hack:20:22 - Data from a URL query string found its way to a SQL query